--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -1,10 +1,9 @@
-<span style="font-size: x-small;">
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:background="@color/ColorPrimary"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
-                                   android:elevation="4dp">
+                                   android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                                   android:elevation="2dp">
 
 </android.support.v7.widget.Toolbar>
-</span>
