--- a/app/src/main/res/layout/fragment_listings.xml
+++ b/app/src/main/res/layout/fragment_listings.xml
@@ -9,4 +9,26 @@
         android:layout_height="match_parent"
         android:id="@android:id/list"/>
 
+    <LinearLayout
+        android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button"
+            android:layout_gravity="bottom"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="There are no crimes."
+            android:id="@+id/no_crimes_tv"
+            android:layout_gravity="center_vertical"/>
+
+    </LinearLayout>
+
 </LinearLayout>
