--- a/app/src/main/res/layout/fragment_in_progress.xml
+++ b/app/src/main/res/layout/fragment_in_progress.xml
@@ -5,5 +5,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@android:id/list"
+        android:background="#e5e4e0"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="3.0dp"
+        android:padding="10.0dp"/>
 
 </LinearLayout>
