--- a/app/src/main/res/color/selector.xml
+++ b/app/src/main/res/color/selector.xml
@@ -6,5 +6,5 @@
           android:color="@android:color/white"/>
     <item android:state_pressed="true"
           android:color="@android:color/white"/>
-    <item android:color="#e5e4e4"/>
+    <item android:color="@android:color/white"/>
 </selector>
