--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ColorPrimary">#4169E1</color>
-    <color name="ColorPrimaryDark">#3454b4</color>
-    <color name="tabsScrollColor">#0000b2</color>
+    <color name="ColorPrimary">#2196f3</color>
+    <color name="ColorPrimaryDark">#1565C0</color>
 </resources>
