--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".MainTabActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:fab="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                tools:context=".MainTabActivity">
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/tabs"
@@ -15,8 +16,63 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/delivery_list_viewPager"
+        android:layout_below="@id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"/>
+        android:layout_height="fill_parent"/>
 
-</LinearLayout>
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/menu_sort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        fab:menu_colorNormal="#2196f3"
+        fab:menu_colorPressed="@color/ColorPrimaryLight"
+        fab:menu_icon="@drawable/fab_add"
+        fab:menu_labels_colorNormal="#2196f3"
+        fab:menu_labels_colorPressed="#2196f3">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/menu_item_sort_bounty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:src="@android:drawable/ic_input_add"
+            fab:fab_colorNormal="@color/ColorPrimary"
+            fab:fab_colorPressed="@color/ColorPrimaryLight"
+            fab:fab_size="normal"
+            fab:fab_label="Sort by Bounty"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/menu_item_sort_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:src="@android:drawable/ic_input_add"
+            fab:fab_colorNormal="@color/ColorPrimary"
+            fab:fab_colorPressed="@color/ColorPrimaryLight"
+            fab:fab_size="normal"
+            fab:fab_label="Sort by Distance"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/menu_item_sort_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:src="@android:drawable/ic_input_add"
+            fab:fab_colorNormal="@color/ColorPrimary"
+            fab:fab_colorPressed="@color/ColorPrimaryLight"
+            fab:fab_size="normal"
+            fab:fab_label="Sort by Time"/>
+
+    </com.github.clans.fab.FloatingActionMenu>
+
+</RelativeLayout>
