Change bounty  to wage

--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -41,7 +41,7 @@
             android:layout_gravity="bottom|right"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
-            android:src="@android:drawable/ic_input_add"
+            android:src="@android:drawable/ic_dialog_info"
             fab:fab_colorNormal="@color/ColorPrimary"
             fab:fab_colorPressed="@color/ColorPrimaryLight"
             fab:fab_size="normal"
@@ -67,7 +67,7 @@
             android:layout_gravity="bottom|right"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
-            android:src="@android:drawable/ic_input_add"
+            android:src="@drawable/ic_menu"
             fab:fab_colorNormal="@color/ColorPrimary"
             fab:fab_colorPressed="@color/ColorPrimaryLight"
             fab:fab_size="normal"
