--- a/app/src/main/res/layout/list_view_delivery.xml
+++ b/app/src/main/res/layout/list_view_delivery.xml
@@ -43,7 +43,10 @@
     </LinearLayout>
 
     <View
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:background="#cccbcb"/>
@@ -75,7 +78,10 @@
     </LinearLayout>
 
     <View
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:background="#cccbcb"/>
