--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-                android:background="#123456"
-                android:padding="0dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#FFFFFF"
+                android:elevation="2dp">
 
     <RelativeLayout
         android:id="@+id/button_view"
-        android:layout_alignParentBottom="true"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:background="#FFFFFF"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:background="#FFFFFF"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp">
 
         <Button
             android:id="@+id/claim_button"
+            android:layout_width="150dp"
+            android:layout_height="35dp"
             android:layout_alignParentTop="true"
             android:layout_marginBottom="16dp"
-            android:padding="5dp"
-            android:text="Claim!"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:background="@color/ColorPrimary"
+            android:textColor="@android:color/white"
+            android:text="Claim!"/>
 
     </RelativeLayout>
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_above="@id/button_view"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:layout_above="@id/button_view"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -79,7 +82,7 @@
                     android:gravity="left"
                     android:text="20 mi"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -103,7 +106,7 @@
                     android:gravity="left"
                     android:text="1234 Sample St"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -127,7 +130,7 @@
                     android:gravity="left"
                     android:text="2 - 4 PM"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -151,7 +154,7 @@
                     android:gravity="left"
                     android:text="Mrs. Sample Person"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -175,7 +178,7 @@
                     android:gravity="left"
                     android:text="123-456-7890"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -188,8 +191,8 @@
             android:background="@android:color/white"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingRight="24dp"
             android:paddingLeft="24dp"
+            android:paddingRight="24dp"
             android:paddingTop="16sp">
 
             <TextView
@@ -228,7 +231,7 @@
                     android:gravity="left"
                     android:text="20 mi"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -252,7 +255,7 @@
                     android:gravity="left"
                     android:text="1234 Sample St"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -276,7 +279,7 @@
                     android:gravity="left"
                     android:text="4 - 7 PM"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -300,7 +303,7 @@
                     android:gravity="left"
                     android:text="Mrs. Sample Person"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -324,7 +327,7 @@
                     android:gravity="left"
                     android:text="123-456-7890"
                     android:textColor="#CC000000"
-                    android:textSize="15sp"/>
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
