--- a/app/src/main/res/layout/fragment_map_tab.xml
+++ b/app/src/main/res/layout/fragment_map_tab.xml
@@ -5,10 +5,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Maps Tab"
-        android:id="@+id/asdf"
-        android:layout_gravity="center"/>
+    <com.google.android.gms.maps.MapView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
