--- a/app/src/main/res/layout/list_view_delivery.xml
+++ b/app/src/main/res/layout/list_view_delivery.xml
@@ -113,4 +113,13 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:layout_height="15dp"
+        android:layout_width="15dp"
+        android:src="@drawable/right_arrow"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        >
+    </ImageView>
+
 </LinearLayout>
