--- a/app/src/main/res/layout/list_view_delivery.xml
+++ b/app/src/main/res/layout/list_view_delivery.xml
@@ -87,29 +87,45 @@
         android:background="#cccbcb"/>
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginRight="3dp"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1">
 
-        <TextView
-            android:text="Wage:"
-            android:layout_marginTop="-2dp"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp"
             android:gravity="center"
-            android:textSize="12sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/list_item_bounty"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="5dp"
-            android:gravity="center_horizontal"
-            android:text="$2"
-            android:textColor="#CC000000"/>
+            <TextView
+                android:text="Wage:"
+                android:layout_marginTop="-2dp"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/list_item_bounty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:gravity="center_horizontal"
+                android:text="$2"
+                android:textColor="#CC000000"/>
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_height="match_parent"
+            android:layout_width="15dp"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/right_arrow">
+        </ImageView>
 
     </LinearLayout>
 
