--- a/app/src/main/res/layout/list_view_current.xml
+++ b/app/src/main/res/layout/list_view_current.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
                 android:layout_margin="10dp"
-                android:background="@android:color/white"
+                android:background="@drawable/selector"
                 android:elevation="1dp">
 
     <View
