--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,11 +4,21 @@
               android:layout_height="match_parent"
               android:gravity="center"
               android:orientation="vertical"
+              android:background="@android:color/white"
               android:paddingBottom="@dimen/activity_vertical_margin"
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
               tools:context=".LoginActivity">
+
+    <View
+        android:layout_width="275dp"
+        android:layout_height="75dp"
+        android:background="@drawable/templogo"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="-50dp"
+        android:layout_marginLeft="15dp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,8 +47,10 @@
     <Button
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="50dp"
+        android:background="@color/ColorPrimary"
         android:text="Login"
+        android:textColor="@android:color/white"
         android:textSize="20sp"/>
 </LinearLayout>
