--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,5 @@
     <color name="ColorPrimaryLight">#00E5FF</color>
     <color name="ColorPrimary">#2196f3</color>
     <color name="ColorPrimaryDark">#1565C0</color>
+    <color name="ColorPrimarySlightlyDark">#1976D2</color>
 </resources>
