--- a/app/src/main/res/layout/fragment_map_tab.xml
+++ b/app/src/main/res/layout/fragment_map_tab.xml
@@ -19,6 +19,7 @@
         android:background="@drawable/round_button"
         android:layout_width="62dp"
         android:layout_height="62dp"
-        android:layout_margin="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="50dp"
         android:layout_gravity="bottom|right"/>
 </FrameLayout>
