--- a/app/src/main/res/layout/fragment_listings.xml
+++ b/app/src/main/res/layout/fragment_listings.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/listings_fragment_container"
-                android:orientation="vertical"
+<RelativeLayout
+    android:id="@+id/listings_fragment_container"
+    xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                  android:id="@+id/refresh_listings_view"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_listings_view"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
 
         <ListView
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@android:id/list"
             android:divider="@android:color/transparent"
             android:dividerHeight="8.0dp"
             android:padding="10.0dp"/>
@@ -29,8 +31,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="There are no deliveries."
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:text="There are no deliveries."/>
 
     </LinearLayout>
 
