--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,9 +2,9 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@android:color/white"
               android:gravity="center"
               android:orientation="vertical"
-              android:background="@android:color/white"
               android:paddingBottom="@dimen/activity_vertical_margin"
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,52 +12,64 @@
               tools:context=".LoginActivity">
 
     <View
-        android:layout_width="275dp"
+        android:id="@+id/image"
+        android:layout_width="250dp"
         android:layout_height="75dp"
-        android:background="@drawable/templogo"
         android:layout_marginBottom="50dp"
-        android:layout_marginTop="-50dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="-50dp"
+        android:background="@drawable/templogo"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="80dp"
+        <ProgressBar
+            android:id="@+id/loading_circle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="10dp"
-            android:text="Username:"
-            android:textSize="16sp"/>
+            android:visibility="gone"
+            android:indeterminate="true"/>
 
-        <EditText
-            android:id="@+id/username_et"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:id="@+id/sliding_ll"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
-            android:hint="Enter ID"
-            />
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/username_et"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:hint="Enter ID"
+                />
+
+            <CheckBox
+                android:id="@+id/remember_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="@string/login_remember"/>
+
+            <Button
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginTop="25dp"
+                android:background="@color/ColorPrimary"
+                android:text="Login"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"/>
+        </LinearLayout>
 
     </LinearLayout>
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_remember"
-        android:id="@+id/remember_checkbox" />
 
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginTop="50dp"
-        android:background="@color/ColorPrimary"
-        android:text="Login"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"/>
 </LinearLayout>
+
