--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_height="75dp"
         android:layout_marginBottom="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="-50dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/templogo"
         />
 
@@ -61,22 +61,16 @@
                 android:textSize="20sp"/>
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/loading_circle"
-            android:visibility="gone"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="200dp">
-
-            <ProgressBar
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"/>
-
-        </LinearLayout>
-
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/loading_circle"
+        android:visibility="invisible"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"/>
 
 </LinearLayout>
 
