--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@android:color/white"
+              android:background="@drawable/blurred_background"
               android:gravity="center"
               android:orientation="vertical"
               android:paddingBottom="@dimen/activity_vertical_margin"
@@ -15,62 +15,74 @@
         android:id="@+id/image"
         android:layout_width="250dp"
         android:layout_height="75dp"
-        android:layout_marginBottom="50dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/templogo"
+        android:background="@drawable/templogo_2"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/sliding_ll"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:gravity="center"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:gravity="center|top"
             android:orientation="vertical">
 
             <EditText
                 android:id="@+id/username_et"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
+                android:layout_marginTop="50dp"
                 android:hint="Enter ID"
                 />
 
             <CheckBox
                 android:id="@+id/remember_checkbox"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/login_remember"/>
 
             <Button
                 android:id="@+id/login_button"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="15dp"
+                android:background="#4EA990"
+                android:text="Log in"
+                android:textColor="#D9000000"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/loading_circle"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:gravity="center">
+
+            <ProgressBar
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_marginTop="25dp"
-                android:background="@color/ColorPrimary"
-                android:text="Login"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:indeterminate="true"/>
+
         </LinearLayout>
 
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/loading_circle"
-        android:visibility="invisible"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"/>
 
 </LinearLayout>
 
