--- a/app/src/main/res/menu/menu_main_tab.xml
+++ b/app/src/main/res/menu/menu_main_tab.xml
@@ -3,9 +3,9 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainTabActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/log_out"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Logout"
         app:showAsAction="never"/>
     <item
         android:id="@+id/testid"
